# sgmenu

./: Cargo.toml  README.md
data/: style.css
src/: main.rs  rowdata.rs  ui.rs
